# baglab

./: .gitignore  README.md  pyproject.toml
baglab/: __init__.py  __main__.py  cli.py  config.py  constants.py  reader.py  report.py  typestore.py
baglab/bronze/: __init__.py  integrity.py  kinematics.py  smoothness.py  static_frames.py  vision.py
docker/: Dockerfile  run.sh
scripts/: bag_to_rerun.py  bag_to_rerun_web.py  convert_db3_to_mcap.py  g1_urdf_logger.py  rosbag_gui.py  sync_orin_bags.sh  unitree_types.py
tests/: conftest.py  test_integrity.py  test_reader.py  test_report.py  test_smoothness.py  test_static_frames.py
