[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "baglab"
version = "0.1.0"
description = "Data review pipeline for G1 robot rosbags (medallion: bronze/silver/gold)."
requires-python = ">=3.11"
dependencies = [
    "rosbags==0.11.2",
    "numpy==2.4.6",
    "msgpack==1.1.2",
]

[project.optional-dependencies]
test = ["pytest==9.0.3"]
viz = [
    "rerun-sdk==0.32.2",
    "opencv-python-headless==4.13.0.92",
]

[project.scripts]
baglab = "baglab.cli:main"

[tool.setuptools.packages.find]
include = ["baglab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
